fix search align in desktop

--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -128,5 +128,6 @@
 }
 
 .searchBarContainer{
-  padding: 0px;
+  display: flex !important;
+  align-items: center !important;
 }
